# VsCode

./: .gitignore  README.md
CMOS74/: CMakeLists.txt  sdkconfig  sdkconfig.old
CMOS74/components/charUtils/: CMakeLists.txt  charUtils.c
CMOS74/components/charUtils/include/: charUtils.h
CMOS74/components/cmos/: CMakeLists.txt
CMOS74/components/cpuLed/: CMakeLists.txt  cpuLed.c  cpuLedInterface.c  cpuLedInterfaceDescriptor.c
CMOS74/components/cpuLed/include/: cpuLed.h  cpuLedInterface.h  cpuLedInterfaceDescriptor.h
CMOS74/components/driver/: CMakeLists.txt  eeprom.c
CMOS74/components/driver/include/: eeprom.h
CMOS74/components/driverCmos/eeprom/: CMakeLists.txt  i2cEeprom.c
CMOS74/components/driverCmos/eeprom/include/: i2cEeprom.h
CMOS74/components/eeprom/: CMakeLists.txt  eepromInterface.c  eepromInterfaceDescriptor.c  eepromTools.c
CMOS74/components/eeprom/include/: eepromInterface.h  eepromInterfaceDescriptor.h  eepromTools.h
CMOS74/components/i2c/: CMakeLists.txt  i2cInterface.c  i2cInterfaceDescriptor.c  i2cTools.c
CMOS74/components/i2c/include/: i2CInterface.h  i2cConstants.h  i2cInterface.h  i2cInterfaceDescriptor.h  i2cTools.h
CMOS74/components/i2cTools/: CMakeLists.txt  i2cTools.c
CMOS74/components/i2cTools/include/: i2cTools.h
CMOS74/components/interface/: CMakeLists.txt  interface.c  interfaceDescriptor.c
CMOS74/components/interface/include/: constants.h  interface.h  interfaceDescriptor.h
CMOS74/components/sevenSegments/: CMakeLists.txt  sevenSegments.c  sevenSegmentsInterface.c
CMOS74/components/sevenSegments/include/: sevenSegments.h  sevenSegmentsInterface.h  sevenSegmentsInterfaceDescriptor.h
CMOS74/components/uartCommand/: CMakeLists.txt  uartCommand.c
CMOS74/components/uartCommand/include/: uartCommand.h
CMOS74/components/uartUtils/: CMakeLists.txt  uartUtils.c
CMOS74/components/uartUtils/include/: uartUtils.h
CMOS74/main/: CMOS74_main.c  CMakeLists.txt  Kconfig.projbuild
