idf_component_register(SRCS "interface.c" 
                            "interfaceDescriptor.c"
                            "../charUtils/charUtils.c"
                            "../cpuLed/cpuLedInterface.c" 
                            "../cpuLed/cpuLedInterfaceDescriptor.c" 
                            "../i2c/i2cInterfaceDescriptor.c"  
                            "../i2c/i2cInterface.c"      
                            "../cmos/i2cEeprom.c"                   
INCLUDE_DIRS "include" 
            "../charUtils/include"
			"../cpuLed/include/" 
            "../i2c/include/"
            "../cmos/include"
            "../cmos/include"
            PRIV_REQUIRES  driver esp_partition esp_event nvs_flash
            )